# when_models_lie_to_please

./: .gitignore  CLAUDE.md  LICENSE  README.md  project_proposal.md  pyproject.toml
configs/: models.yaml  sae_configs.yaml
configs/experiment_configs/: phase1_features.yaml  phase2_circuits.yaml  phase3_transfer.yaml  phase4_interventions.yaml
experiments/scripts/: build_datasets.py  import_colab_results.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py
notebooks/: 01_data_exploration.ipynb  02_feature_discovery.ipynb  03_circuit_tracing.ipynb  04_transfer_analysis.ipynb  05_interventions.ipynb  06_scale_comparison.ipynb  colab_runner.ipynb
paper/: main.tex  references.bib
src/: __init__.py
src/analysis/: geometry.py  scale.py  statistics.py  transfer.py
src/circuits/: attribution.py  transcoder_tracing.py  validation.py  visualization.py
src/data/: dataset_builder.py  loaders.py  prompt_templates.py
src/features/: characterization.py  clustering.py  differential.py  extraction.py
src/interventions/: clamping.py  conditional.py  evaluation.py  steering.py
src/utils/: gemma_scope.py  mishax_wrapper.py  mock_utils.py  neuronpedia.py
tests/: test_circuits.py  test_data.py  test_features.py  test_full_pipeline.py  test_mock_pipeline.py
