[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "when-models-lie-to-please"
version = "0.1.0"
description = "Tracing internal-external alignment failures in LLMs via sparse interpretability"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Victor Ashioya", email = "victorashioya960@gmail.com" }
]

dependencies = [
    # Core ML
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0",           # 4-bit quantization for 27B on smaller GPUs

    # SAE / interpretability
    "sae-lens>=4.0.0",
    "circuit-tracer>=0.1.0",          # Anthropic circuit tracing library

    # Data
    "datasets>=2.20.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Experiment management
    "wandb>=0.17.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",

    # Statistics
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",

    # Visualization
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "networkx>=3.3",                  # Circuit graph visualization

    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
